Details
-
Bug
-
Resolution: Fixed
-
Major
Description
I created this ticket for backporting purposes only, as it had no ticket up to now.
[SYSSETUP] Fix a DPH report about dwPageCount
- "(sdk/lib/rtl/heappage.c:1329) corrupted suffix pattern"
detected at
"dll/win32/syssetup/wizard.c:2672 (InstallWizard)" - Add an ASSERT(), as hinted by Mark Jansen.
It happened in 2nd stage setup after the Gecko setup was canceled or completed and the button "Fertig" (its german label) was pressed.
It had no user visible impact. I never saw a crash due to that, but we should still not corrupt memory.
I could also observe it with enabled DPH in 0.4.7-release-129-gd23c219 and 0.4.8-release-114-gf4e1f68 with enabled DPH yesterday.
It most likely was introduced the last time a page within that setup was added without increasing the array in SVN r75495.