[0.4.7][SYSSETUP] Fix a DPH report about dwPageCount CORE-18068

- "(sdk/lib/rtl/heappage.c:1329) corrupted suffix pattern"
  detected at
  "dll/win32/syssetup/wizard.c:2672 (InstallWizard)"
- Add an ASSERT(), as hinted by Mark Jansen.

It happened in 2nd stage setup after the Gecko setup was canceled or completed and the button "Fertig" (its german label) was pressed.
It had no user visible impact. I never saw a crash due to that, but we should still not corrupt memory.
It regressed the last time a page within that setup was added without increasing the array in
SVN r75495 == git fc1f0c2088450217d7a207ee73bba6c23fc8c30d

fix picked from commit 0.4.10-dev-224-g 1668527acf67a1f0bf405316bf86fd5b213e1f85