dll/win32/syssetup/wizard.c
@@ -2522,7 +2522,7 @@ InstallWizard(VOID)
     PSETUPDATA pSetupData = NULL;
     HMODULE hNetShell = NULL;
     PFNREQUESTWIZARDPAGES pfn = NULL;
-    DWORD dwPageCount = 8, dwNetworkPageCount = 0;
+    DWORD dwPageCount = 9, dwNetworkPageCount = 0;
     BOOL bActCtxActivated;
     ULONG_PTR cookie;
     HANDLE hActCtx;
@@ -2662,6 +2662,8 @@ InstallWizard(VOID)
     psp.pfnDlgProc = FinishDlgProc;
     psp.pszTemplate = MAKEINTRESOURCE(IDD_FINISHPAGE);
     phpage[nPages++] = CreatePropertySheetPage(&psp);
+
+    ASSERT(nPages == dwPageCount);
 
     /* Create the property sheet */
     psh.dwSize = sizeof(PROPSHEETHEADER);
